--- a/Source/config.json
+++ b/Source/config.json
@@ -5,7 +5,7 @@
        "name": "Source",
        "width": 960,
        "height": 640,
-       "entry": "src/main.lua",
+       "entry": "src/IntroductionScene.lua",
        "consolePort": 6050,
        "uploadPort": 6060
     },
